# CV-Align-Agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
docs/: ARCHITECTURE_DEEPDIVE.md  FEATURES.md  architecture.md
scripts/: check_llm.py  parse_resume.py  screen.py
src/cv_align_agents/: __init__.py  pdf.py  settings.py  state.py
src/cv_align_agents/agents/: __init__.py  critic.py  jd_parser.py  matcher.py  parser.py
src/cv_align_agents/api/: __init__.py  main.py
src/cv_align_agents/llm/: __init__.py  client.py
src/cv_align_agents/pipeline/: __init__.py  graph.py  hygiene.py  scorer.py  screen.py
src/cv_align_agents/storage/: __init__.py  runs.py
src/cv_align_agents/web/: app.js  index.html  style.css
tests/: __init__.py  test_api.py  test_critic.py  test_graph.py  test_hygiene.py  test_jd_parser.py  test_matcher.py  test_parser.py  test_scorer.py  test_screen.py  test_state.py  test_storage.py
